--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,9 @@
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
 
+affyPara 1.1.4 (build 23. June 2008)
+normalizeAffyBatchLoessPara memory improvement
+
 affyPara 1.1.3 (build 3. June 2008)
 Vignette extended
 
