- computeExpressionSet improved - CHANGELOG renamed to NEWS
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@33325 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.1.8 (build 22. August 2009)
+- computeExpressionSet improved
+- changelog renamed to NEWS
+
 affyPara 1.1.7 (build 17. July 2008)
 - Parallelized partial Loess normalization with Permutation added
 - all Package building errors fixed
