--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.3.3 (build 12. November 2008)
+- boxplotPara improved
+
 affyPara 1.3.2 (build 28. October 2008)
 - vsnPara (incl. doku) added
 - affyPara now works on multiprocessor machines and mulicomputer systems correctly
