--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,11 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.3.4 (build 14. November 2008)
+- boxplotPara improved
+- MAplotPara works
+- documentation added
+
 affyPara 1.3.3 (build 12. November 2008)
 - boxplotPara improved
 
