--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.3.5 (build 18. December 2008)
+- New functions makeCluster and stopCluster (overloading snow functions)
+-- cluster object will be saved as default parameter in .affyParaInternalEnv$cl
+-- and default cluster object will be used in every preprocessing function
+--> no more cluster object handling is required: improvement for usability!
+- boxplotPara and MAplotPara improved
+- documentation added and fixed for new structure
+
 affyPara 1.3.4 (build 14. November 2008)
 - boxplotPara improved
 - MAplotPara works
