Added affydata to the suggested package list to use Dilution data set. Also fixed some man page issues.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@36942 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/affyPara.Rnw
+++ b/inst/doc/affyPara.Rnw
@@ -47,6 +47,7 @@ to several nodes solves the main memory problems caused by the AffyBatch and acc
 
 <<echo=F, results=hide>>=
 library(affyPara)
+library(affydata)
 sI <- sessionInfo()
 @
 
@@ -87,9 +88,11 @@ the literature or the webpage http://www.cs.uiowa.edu/\textasciitilde luke/R/clu
 The first thing you need to do is load the package.
 \begin{Sinput}
 R> library(affyPara)
+R> library(affydata)
 \end{Sinput}
 <<echo=F,results=hide>>=
 library(affyPara)
+library(affydata)
 @
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
