--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,12 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.5.2 (build 27. Mai 2009)
+- read.affybatchPara added
+
+affyPara 1.4.0 (build 21. April 2009)
+- new BioConductor Version 2.4
+
 affyPara 1.3.8 (build 25. March 2009)
 - Summarization optimized
 
