- additional tool to boxplotPara added: bagplot - and qaSummary added
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@39764 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.5.3 (build 30. Mai 2009)
+- additional tool to boxplotPara added: bagplot
+- and qaSummary added
+
 affyPara 1.5.2 (build 27. Mai 2009)
 - read.affybatchPara added
 
