--- a/inst/doc/references.bib
+++ b/inst/doc/references.bib
@@ -1,3 +1,6 @@
+% This file was created with JabRef 2.3.1.
+% Encoding: UTF-8
+
 @ARTICLE{Gentleman2004,
   author = {Robert C. Gentleman and Vincent J. Carey and Douglas M. Bates and
 	Ben Bolstad and Marcel Dettling and Sandrine Dudoit and Byron Ellis
@@ -14,6 +17,84 @@
   pages = {R80},
   timestamp = {2007.08.28},
   url = {http://genomebiology.com/2004/5/10/R80}
+}
+
+@ARTICLE{Huber2002,
+  author = {Wolfgang Huber and Anja von Heydebreck and Holger S\"ultmann and
+	Annemarie Poustka and Martin Vingron},
+  title = {Variance stabilization applied to microarray data calibration and
+	to the quantification of differential expression.},
+  journal = {Bioinformatics},
+  year = {2002},
+  volume = {18 Suppl 1},
+  pages = {S96--104},
+  abstract = {We introduce a statistical model for microarray gene expression data
+	that comprises data calibration, the quantification of differential
+	expression, and the quantification of measurement error. In particular,
+	we derive a transformation h for intensity measurements, and a difference
+	statistic Deltah whose variance is approximately constant along the
+	whole intensity range. This forms a basis for statistical inference
+	from microarray data, and provides a rational data pre-processing
+	strategy for multivariate analyses. For the transformation h, the
+	parametric form h(x)=arsinh(a+bx) is derived from a model of the
+	variance-versus-mean dependence for microarray intensity data, using
+	the method of variance stabilizing transformations. For large intensities,
+	h coincides with the logarithmic transformation, and Deltah with
+	the log-ratio. The parameters of h together with those of the calibration
+	between experiments are estimated with a robust variant of maximum-likelihood
+	estimation. We demonstrate our approach on data sets from different
+	experimental platforms, including two-colour cDNA arrays and a series
+	of Affymetrix oligonucleotide arrays.},
+  institution = {Department of Molecular Genome Analysis, German Cancer Research Center,
+	INF 280, Heidelberg, 69120, Germany. w.huber@dkfz.de},
+  keywords = {Algorithms; Analysis of Variance; Calibration; Data Interpretation,
+	Statistical; Gene Expression Profiling; Likelihood Functions; Models,
+	Genetic; Models, Statistical; Oligonucleotide Array Sequence Analysis;
+	Reference Standards; Reproducibility of Results; Sensitivity and
+	Specificity; Software},
+  owner = {schmidb},
+  pmid = {12169536},
+  timestamp = {2009.03.05}
+}
+
+@ARTICLE{Huber2007,
+  author = {Wolfgang Huber and Anja von Heydebreck and Holger Sueltmann and Annemarie
+	Poustka and Martin Vingron},
+  title = {Parameter estimation for the calibration and variance stabilization
+	of microarray data},
+  journal = {Statistical Applications in Genetics and Molecular Biology},
+  year = {2007},
+  volume = {2},
+  pages = {3},
+  number = {1},
+  url = {http://ideas.repec.org/a/bep/sagmbi/2200713.html}
+}
+
+@ARTICLE{Irizarry2003a,
+  author = {Rafael A Irizarry and Bridget Hobbs and Francois Collin and Yasmin
+	D Beazer-Barclay and Kristen J Antonellis and Uwe Scherf and Terence
+	P Speed},
+  title = {Exploration, normalization, and summaries of high density oligonucleotide
+	array probe level data.},
+  journal = {Biostatistics},
+  year = {2003},
+  volume = {4},
+  pages = {249--264},
+  number = {2},
+  month = {Apr},
+  url = {http://dx.doi.org/10.1093/biostatistics/4.2.249}
+}
+
+@INCOLLECTION{Irizarry2002,
+  author = {R. Irizarry and L. Gautier and L. Cope},
+  title = {An R package for analyses of affymetrix oligonucleotide arrays},
+  booktitle = {The Analysis of Gene Expression Data: Methods and Software},
+  publisher = {Springer},
+  year = {2002},
+  editor = {G. Parmigiani and E.S. Garrett and R.A. Irizarry and S.L. Zeger},
+  address = {New York},
+  owner = {Schmidberger},
+  timestamp = {2008.01.21}
 }
 
 @ARTICLE{Rossini2003,
@@ -61,31 +142,3 @@
   url = {http://www.stats.uwo.ca/faculty/yu/Rmpi}
 }
 
-
-@INCOLLECTION{Irizarry2002,
-  author = {R. Irizarry and L. Gautier and L. Cope},
-  title = {An R package for analyses of affymetrix oligonucleotide arrays},
-  booktitle = {The Analysis of Gene Expression Data: Methods and Software},
-  publisher = {Springer},
-  year = {2002},
-  editor = {G. Parmigiani and E.S. Garrett and R.A. Irizarry and S.L. Zeger},
-  address = {New York},
-  owner = {Schmidberger},
-  timestamp = {2008.01.21}
-}
-
-
-@ARTICLE{Irizarry2003a,
-  author = {Rafael A Irizarry and Bridget Hobbs and Francois Collin and Yasmin
-	D Beazer-Barclay and Kristen J Antonellis and Uwe Scherf and Terence
-	P Speed},
-  title = {Exploration, normalization, and summaries of high density oligonucleotide
-	array probe level data.},
-  journal = {Biostatistics},
-  year = {2003},
-  volume = {4},
-  pages = {249--264},
-  number = {2},
-  month = {Apr},
-  url = {http://dx.doi.org/10.1093/biostatistics/4.2.249}
-}
